# docs/swagger.json
@@ -1161,12 +1161,20 @@
         }
       }
     },
-    "/user/getProfile": {
+    "/user/getProfile/{id}": {
       "get": {
         "tags": [
           "Users/"
         ],
         "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
         "responses": {
           "200": {
             "description": "OK"
@@ -1262,7 +1270,7 @@
         }
       }
     },
-    "/user/isActive": {
+    "/user/isActive/{id}": {
       "get": {
         "tags": [
           "Users/"
@@ -1270,8 +1278,9 @@
         "description": "",
         "parameters": [
           {
-            "name": "cookie",
-            "in": "header",
+            "name": "id",
+            "in": "path",
+            "required": true,
             "type": "string"
           }
         ],
@@ -1279,8 +1288,8 @@
           "200": {
             "description": "OK"
           },
-          "401": {
-            "description": "Unauthorized"
+          "404": {
+            "description": "Not Found"
           },
           "500": {
             "description": "Internal Server Error"
@@ -1288,7 +1297,7 @@
         }
       }
     },
-    "/user/isNotActive": {
+    "/user/isNotActive/{id}": {
       "get": {
         "tags": [
           "Users/"
@@ -1296,8 +1305,9 @@
         "description": "",
         "parameters": [
           {
-            "name": "cookie",
-            "in": "header",
+            "name": "id",
+            "in": "path",
+            "required": true,
             "type": "string"
           }
         ],
@@ -1305,8 +1315,8 @@
           "200": {
             "description": "OK"
           },
-          "401": {
-            "description": "Unauthorized"
+          "404": {
+            "description": "Not Found"
           },
           "500": {
             "description": "Internal Server Error"
